# fin-manager

./: .env_example  Dockerfile  LICENSE  README.md  app.json  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: deploy.yml
authorization/: models.py  serializers.py  urls.py  views.py
authorization/migrations/: 0001_initial.py
fin_manager/: asgi.py  settings.py  urls.py  wsgi.py
fin_manager/settings/: base.py  dev.py  prod.py
finance/: filters.py  models.py  serializers.py  urls.py  views.py
finance/migrations/: 0001_finance_init.py  0001_initial.py  0002_alter_financecategory_unique_together.py  0002_financecategoryconstructor.py
typings/django_filters/: __init__.pyi  compat.pyi  conf.pyi  exceptions.pyi  fields.pyi  filters.pyi  filterset.pyi  utils.pyi  widgets.pyi
typings/django_filters/rest_framework/: __init__.pyi  backends.pyi  filters.pyi  filterset.pyi
typings/dotenv/: __init__.pyi
typings/dotenv/coreapi-stubs/: __init__.pyi
typings/dotenv/coreschema-stubs/: __init__.pyi
typings/dotenv/django-stubs/: __init__.pyi
typings/dotenv/django-stubs/apps/: __init__.pyi
typings/dotenv/django-stubs/core/: __init__.pyi
typings/dotenv/psycopg2-stubs/: __init__.pyi
typings/dotenv/rest_framework-stubs/: __init__.pyi
typings/rest_framework_simplejwt/: __init__.pyi  authentication.pyi  exceptions.pyi  serializers.pyi  settings.pyi  tokens.pyi  utils.pyi  views.pyi
typings/rest_framework_simplejwt/token_blacklist/: models.pyi
user/: models.py  serializers.py  urls.py  views.py
(+36 files in other folders)
